- Fixing images not showing after deploying to github

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 
 .Main {
   width: 100%;
-  height: fit-content;
+  min-height: 100vh;
+  height: 100%;
+
 
   font-family: 'PT Sans';
 
@@ -68,7 +70,7 @@
 
 .Body {
   width: 100%;
-  height: 90%;
+  height: 100%;
 
   padding: 0;
   margin: 0;
